--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ p {
 /******** HEADER STYLES ********/
 /* The widths are in a percentage! */
 header {
-	height: 110px;
+	
 	display: flex;
 	justify-content: center;
 	text-align: center;
@@ -72,6 +72,8 @@ header h1 span {
 
 header nav {
 	padding: 46px 0;
+	border-top: 3px solid #77A466;
+	width: 100%;
 }
 
 header nav ul {
@@ -83,13 +85,15 @@ header nav ul li {
 	font-size: 0.875em;
 	font-weight: 700;
 	text-transform: uppercase;
-	padding: 0 10px;
+	padding: 0px 10px;
 	width: 100%;
+	list-style: none;
 }
 
 header nav ul li a {
 	text-decoration: none;
 	color: #45610E;
+	
 }
 
 /********  MAIN STYLES ********/
