--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,8 @@ h4 {
 }
 
 p {
-	line-height: 2.25em;
+	font-size: 1rem;
+	line-height: 36px;
 }
 
 /******** HEADER STYLES ********/
@@ -71,7 +72,7 @@ header h1 span {
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 20px 0;
 	border-top: 3px solid #77A466;
 	width: 100%;
 }
@@ -82,7 +83,7 @@ header nav ul {
 }
 
 header nav ul li {
-	font-size: 0.875em;
+	font-size: 0.875rem;
 	font-weight: 700;
 	text-transform: uppercase;
 	padding: 0px 10px;
@@ -139,8 +140,8 @@ header nav ul li a {
 .section-two {
 	/* width:42% */
 	width: 100%;
-	border-left: 5px solid #EEE;
-	border-right: 5px solid #EEE;
+	border-top: 5px solid #EEE;
+	border-bottom: 5px solid #EEE;
 }
 
 .section-three {
@@ -177,4 +178,66 @@ footer span {
 	text-transform: lowercase;
 	color: #45610E;
 	font-size: 14px;
+}
+
+
+/***--Media Queries---***/
+
+/*Tablet Styles*/
+@media all and (min-width: 768px) {
+
+.bottom-section .content-wrapper {
+	border-top: 5px solid #EEE;
+	border-bottom: 5px solid #EEE;
+	justify-content: space-evenly;
+}
+
+.section-one {
+	/* width:29%*/
+	width: 29%;
+}
+
+.section-two {
+	/* width:42% */
+	width: 42%;
+	border-left: 5px solid #EEE;
+	border-right: 5px solid #EEE;
+}
+
+.section-three {
+	/* Width:29% */
+	width: 29%;
+}
+
+/*Desktop Styles*/
+@media all and (min-width: 1200px) {
+
+	body {
+		font-size: 1em;
+	}
+	
+	header {
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px 0;
+	}
+	
+	header h1 {
+		width: 30%;
+		padding: 0;
+		text-align: left;
+	}
+	header nav {
+		width: 21%;
+		border-top: none;
+	}
+	
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+	.section-two {
+		border-top: none;
+		border-bottom: none;
+	}
 }
